@@ -553,20 +553,38 @@ argument_list|()
 decl_stmt|;
 name|Path
 index|[]
-name|files
+name|localFiles
 init|=
 name|context
 operator|.
 name|getLocalCacheFiles
 argument_list|()
 decl_stmt|;
+name|URI
+index|[]
+name|files
+init|=
+name|context
+operator|.
+name|getCacheFiles
+argument_list|()
+decl_stmt|;
 name|Path
+index|[]
+name|localArchives
+init|=
+name|context
+operator|.
+name|getLocalCacheArchives
+argument_list|()
+decl_stmt|;
+name|URI
 index|[]
 name|archives
 init|=
 name|context
 operator|.
-name|getLocalCacheArchives
+name|getCacheArchives
 argument_list|()
 decl_stmt|;
 name|FileSystem
@@ -580,6 +598,28 @@ name|conf
 argument_list|)
 decl_stmt|;
 comment|// Check that 2 files and 2 archives are present
+name|TestCase
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|localFiles
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|TestCase
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|localArchives
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
 name|TestCase
 operator|.
 name|assertEquals
@@ -613,7 +653,7 @@ name|fs
 operator|.
 name|getFileStatus
 argument_list|(
-name|files
+name|localFiles
 index|[
 literal|0
 index|]
@@ -631,7 +671,7 @@ name|fs
 operator|.
 name|getFileStatus
 argument_list|(
-name|files
+name|localFiles
 index|[
 literal|1
 index|]
@@ -655,7 +695,7 @@ argument_list|(
 operator|new
 name|Path
 argument_list|(
-name|archives
+name|localArchives
 index|[
 literal|0
 index|]
@@ -676,7 +716,7 @@ argument_list|(
 operator|new
 name|Path
 argument_list|(
-name|archives
+name|localArchives
 index|[
 literal|1
 index|]
