@@ -3062,20 +3062,38 @@ argument_list|()
 decl_stmt|;
 name|Path
 index|[]
-name|files
+name|localFiles
 init|=
 name|context
 operator|.
 name|getLocalCacheFiles
 argument_list|()
 decl_stmt|;
+name|URI
+index|[]
+name|files
+init|=
+name|context
+operator|.
+name|getCacheFiles
+argument_list|()
+decl_stmt|;
 name|Path
+index|[]
+name|localArchives
+init|=
+name|context
+operator|.
+name|getLocalCacheArchives
+argument_list|()
+decl_stmt|;
+name|URI
 index|[]
 name|archives
 init|=
 name|context
 operator|.
-name|getLocalCacheArchives
+name|getCacheArchives
 argument_list|()
 decl_stmt|;
 comment|// Check that 4 (2 + appjar + DistrubutedCacheChecker jar) files
@@ -3086,7 +3104,29 @@ name|assertEquals
 argument_list|(
 literal|4
 argument_list|,
+name|localFiles
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|4
+argument_list|,
 name|files
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|localArchives
 operator|.
 name|length
 argument_list|)
@@ -3113,7 +3153,7 @@ name|filesMap
 init|=
 name|pathsToMap
 argument_list|(
-name|files
+name|localFiles
 argument_list|)
 decl_stmt|;
 name|Assert
@@ -3195,7 +3235,7 @@ name|archivesMap
 init|=
 name|pathsToMap
 argument_list|(
-name|archives
+name|localArchives
 argument_list|)
 decl_stmt|;
 name|Assert
